--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,28 @@
 {
-    "name": "symfony/skeleton",
     "type": "project",
-    "license": "MIT",
-    "description": "A minimal Symfony project recommended to create bare bones applications",
+    "license": "proprietary",
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "^4.0",
+        "sensio/framework-extra-bundle": "^5.1",
+        "symfony/console": "^4.1@beta",
+        "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0",
+        "symfony/framework-bundle": "^4.1@beta",
         "symfony/lts": "^4@dev",
-        "symfony/yaml": "^4.0"
+        "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/twig-bundle": "^4.1@beta",
+        "symfony/var-dumper": "^4.1@beta",
+        "symfony/yaml": "^4.1@beta"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.1@beta",
+        "symfony/web-server-bundle": "^4.1@beta"
     },
+    "minimum-stability": "beta",
+    "prefer-stable": true,
     "config": {
         "preferred-install": {
             "*": "dist"
@@ -40,8 +47,10 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
-        "auto-scripts": [
-        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
             "@auto-scripts"
         ],
