--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
     "jquery": "^3.3.1"
+  },
+  "dependencies": {
+    "buefy": "^0.6.6",
+    "vue": "^2.5.17"
   }
 }
