--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "vue-loader": "^14",
+    "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
     "buefy": "^0.6.6",
