--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
-    "buefy": "^0.6.6",
+    "element-ui": "^2.4.6",
     "vue": "^2.5.17"
   }
 }
