--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "bolt/collection": "^1.1",
         "bolt/common": "^1.1",
+        "cocur/slugify": "^3.1",
         "guzzlehttp/guzzle": "^6.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.1@beta",
