--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "dependencies": {
     "element-ui": "^2.4.6",
     "vue": "^2.5.17"
+  },
+  "scripts": {
+    "dev-server": "./node_modules/.bin/encore dev-server",
+    "dev": "./node_modules/.bin/encore dev",
+    "watch": "./node_modules/.bin/encore dev --watch",
+    "build": "./node_modules/.bin/encore production"
   }
 }
