--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -25,5 +25,5 @@ doctrine:
                 is_bundle: false
                 type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                prefix: 'Bolt\Entity'
+                alias: Bolt
