--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Bolt\\": "src/"
         }
     },
     "autoload-dev": {
