--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,13 +13,13 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    Bolt\:
         resource: '../src/*'
         exclude: '../src/{Entity,Migrations,Tests,Kernel.php}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
+    Bolt\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
