--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.1",
         "symfony/web-server-bundle": "^4.1"
     },
