--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/debug-pack": "^1.0",
+        "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
