--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,51 @@
 {
-    "name": "bolt/bolt",
+    "name": "symfony/symfony-demo",
     "license": "MIT",
     "type": "project",
-    "description": "Bolt 4 skeleton / prototype",
+    "description": "Symfony Demo Application",
     "require": {
         "php": "^7.1.3",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "bolt/collection": "^1.1",
-        "bolt/common": "^1.1",
-        "cocur/slugify": "^3.1",
-        "erusev/parsedown": "^1.7",
-        "ezyang/htmlpurifier": "^4.10",
-        "guzzlehttp/guzzle": "^6.3",
-        "sensio/framework-extra-bundle": "^5.1",
+        "ext-pdo_sqlite": "*",
+        "doctrine/doctrine-bundle": "^1.6.10",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.5.11",
+        "erusev/parsedown": "^1.6",
+        "ezyang/htmlpurifier": "^4.9",
+        "sensio/framework-extra-bundle": "^5.0",
+        "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
-        "symfony/debug-pack": "^1.0",
         "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
-        "symfony/lts": "^4@dev",
-        "symfony/orm-pack": "^1.0",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/polyfill-php72": "^1.8",
         "symfony/security-bundle": "^4.1",
+        "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/translation": "^4.1",
+        "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1",
         "twig/extensions": "^1.5",
-        "white-october/pagerfanta-bundle": "^1.2"
+        "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "friendsofphp/php-cs-fixer": "^2.12",
+        "symfony/browser-kit": "^4.1",
+        "symfony/css-selector": "^4.1",
+        "symfony/debug-bundle": "^4.1",
         "symfony/dotenv": "^4.1",
+        "symfony/phpunit-bridge": "^4.1",
+        "symfony/stopwatch": "^4.1",
+        "symfony/web-profiler-bundle": "^4.1",
         "symfony/web-server-bundle": "^4.1"
     },
-    "minimum-stability": "beta",
-    "prefer-stable": true,
     "config": {
+        "platform": {
+            "php": "7.1.3"
+        },
         "preferred-install": {
             "*": "dist"
         },
@@ -52,17 +61,11 @@
             "App\\Tests\\": "tests/"
         }
     },
-    "replace": {
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -76,7 +79,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false
+            "allow-contrib": true,
+            "require": "4.1.*"
         }
     }
 }
