--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,7 +17,7 @@ services:
         bind:               # defines the scalar arguments once and apply them to any service defined/created in this file
             $locales: '%app_locales%'
             $defaultLocale: '%locale%'
-            # $emailSender: '%app.notifications.email_sender%'
+            $emailSender: '%app.notifications.email_sender%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -31,5 +31,7 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # when the service definition only contains arguments, you can omit the
+    # 'arguments' key and define the arguments just below the service class
+    Bolt\EventSubscriber\CommentNotificationSubscriber:
+        $sender: '%app.notifications.email_sender%'
