--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.20.1",
-    "jquery": "^3.3.1",
-    "vue-loader": "^14",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "dependencies": {
-    "element-ui": "^2.4.6",
-    "vue": "^2.5.17"
+    "@symfony/webpack-encore": "^0.9.1",
+    "bloodhound-js": "^1.2.1",
+    "bootstrap-sass": "^3.3.7",
+    "bootstrap-tagsinput": "^0.7.1",
+    "bootswatch": "^3.3.7",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "font-awesome": "^4.7.0",
+    "highlight.js": "^9.12.0",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
+    "lato-font": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "typeahead.js": "^0.11.1"
   },
   "scripts": {
     "dev-server": "./node_modules/.bin/encore dev-server",
