--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,28 @@
 {
-    "name": "symfony/symfony-demo",
+    "name": "bolt/bolt",
     "license": "MIT",
     "type": "project",
-    "description": "Symfony Demo Application",
+    "description": "Bolt 4 skeleton / prototype",
     "require": {
         "php": "^7.1.3",
         "ext-pdo_sqlite": "*",
-        "doctrine/doctrine-bundle": "^1.6.10",
-        "doctrine/doctrine-migrations-bundle": "^1.3",
-        "doctrine/orm": "^2.5.11",
-        "erusev/parsedown": "^1.6",
-        "ezyang/htmlpurifier": "^4.9",
-        "sensio/framework-extra-bundle": "^5.0",
-        "sensiolabs/security-checker": "^4.1",
+        "bolt/collection": "^1.1",
+        "bolt/common": "^1.1",
+        "cocur/slugify": "^3.1",
+        "erusev/parsedown": "^1.7",
+        "ezyang/htmlpurifier": "^4.10",
+        "guzzlehttp/guzzle": "^6.3",
+        "sensio/framework-extra-bundle": "^5.1",
+	"sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.1",
+        "symfony/console": "^4.1",
+        "symfony/debug-pack": "^1.0",
         "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php72": "^1.8",
         "symfony/security-bundle": "^4.1",
         "symfony/swiftmailer-bundle": "^3.1",
@@ -42,6 +46,8 @@
         "symfony/web-profiler-bundle": "^4.1",
         "symfony/web-server-bundle": "^4.1"
     },
+    "minimum-stability": "beta",
+    "prefer-stable": true,
     "config": {
         "platform": {
             "php": "7.1.3"
