--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "ezyang/htmlpurifier": "^4.10",
         "guzzlehttp/guzzle": "^6.3",
         "sensio/framework-extra-bundle": "^5.1",
-	"sensiolabs/security-checker": "^4.1",
+        "sensiolabs/security-checker": "^4.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/debug-pack": "^1.0",
@@ -21,6 +22,7 @@
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
+        "symfony/intl": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php72": "^1.8",
