--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@symfony/webpack-encore": "^0.20.1",
     "jquery": "^3.3.1",
     "vue-loader": "^14",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "workbox-webpack-plugin": "^3.5.0"
   },
   "dependencies": {
     "element-ui": "^2.4.6",
