--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/css-selector": "^4.1",
         "symfony/debug-bundle": "^4.1",
         "symfony/dotenv": "^4.1",
+        "symfony/maker-bundle": "^1.7",
         "symfony/phpunit-bridge": "^4.1",
         "symfony/stopwatch": "^4.1",
         "symfony/web-profiler-bundle": "^4.1",
