--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "workbox-webpack-plugin": "^3.5.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.4.6",
     "vue": "^2.5.17"
   },
