--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
     "jquery": "^3.3.1",
+    "register-service-worker": "^1.5.2",
     "vue-loader": "^14",
     "vue-template-compiler": "^2.5.17",
     "workbox-webpack-plugin": "^3.5.0"
