--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,12 +1,12 @@
-#controllers:
-#    resource: '../src/Controller/'
-#    type: annotation
-
-controllers_with_locale:
+controllers:
     resource: '../src/Controller/'
     type: annotation
-    prefix: /{_locale}
-    requirements:
-        _locale: '%app_locales%'
-    defaults:
-        _locale: '%locale%'
+#
+#controllers_with_locale:
+#    resource: '../src/Controller/'
+#    type: annotation
+#    prefix: /{_locale}
+#    requirements:
+#        _locale: '%app_locales%'
+#    defaults:
+#        _locale: '%locale%'
