--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -42,7 +42,8 @@ return PhpCsFixer\Config::create()
         'strict_comparison' => true,
         'strict_param' => true,
         'yoda_style' => false,
-        'concat_space' => ['spacing' => 'one' ]
+        'concat_space' => ['spacing' => 'one' ],
+        'native_function_invocation' => false,
     ])
     ->setFinder($finder)
     ->setCacheFile(__DIR__.'/var/.php_cs.cache')
