--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "jquery": "^3.3.1",
     "register-service-worker": "^1.5.2",
     "vue-loader": "^14",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
     "workbox-webpack-plugin": "^3.5.0"
   },
