Install API Platform

--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,7 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/blog.sqlite
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
