--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "vue-loader": "^14",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.0.1",
     "workbox-webpack-plugin": "^3.5.0"
   },
   "dependencies": {
