--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,7 +16,7 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
-            App:
+            Bolt:
                 is_bundle: false
                 type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
