--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,3 +1,6 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+    formats:
+        json:     ['application/json']
+        jsonapi:  ['application/vnd.api+json']
