--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1",
         "twig/extensions": "^1.5",
+        "webmozart/path-util": "^2.3",
         "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
