--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
+        "league/glide-symfony": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.1",
@@ -23,7 +24,6 @@
         "symfony/flex": "^1.1",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
-        "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php72": "^1.8",
         "symfony/security-bundle": "^4.1",
