--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "league/glide-symfony": "^1.0",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/debug-pack": "^1.0",
