--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,6 +1,4 @@
 {
   "assets/bolt.js": "/assets/bolt.js",
-  "assets/bolt.css": "/assets/bolt.css",
-  "assets/fonts/element-icons.woff": "/assets/fonts/element-icons.2fad952a.woff",
-  "assets/fonts/element-icons.ttf": "/assets/fonts/element-icons.6f0a7632.ttf"
+  "assets/bolt.css": "/assets/bolt.css"
 }
