--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,12 +5,10 @@ security:
         Bolt\Entity\User: bcrypt
 
     providers:
-        # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-        # In this example, users are stored via Doctrine in the database
-        # To see the users at src/App/DataFixtures/ORM/LoadFixtures.php
-        # To load users from somewhere else: https://symfony.com/doc/current/security/custom_provider.html
         database_users:
-            entity: { class: Bolt\Entity\User, property: username }
+            entity:
+                class: Bolt\Entity\User
+                property: username
 
     # https://symfony.com/doc/current/security.html#initial-security-yml-setup-authentication
     firewalls:
@@ -19,11 +17,7 @@ security:
             security: false
 
         main:
-            # this firewall applies to all URLs
             pattern: ^/
-
-            # but the firewall does not require login on every page
-            # denying access is done in access_control or in your controllers
             anonymous: true
 
             # This allows the user to login by submitting a username and password
