--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,10 +24,10 @@ security:
             # Reference: https://symfony.com/doc/current/security/form_login_setup.html
             form_login:
                 # The route name that the login form submits to
-                check_path: security_login
+                check_path: bolt_login
                 # The name of the route where the login form lives
                 # When the user tries to access a protected page, they are redirected here
-                login_path: security_login
+                login_path: bolt_login
                 # Secure the login form against CSRF
                 # Reference: https://symfony.com/doc/current/security/csrf_in_login_form.html
                 csrf_token_generator: security.csrf.token_manager
