--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,12 +2,13 @@
 # the route (FrameworkBundle:Template:template) is a convenient shortcut when
 # the template can be rendered without executing any logic in your own controller.
 # See https://symfony.com/doc/current/cookbook/templating/render_without_controller.html
-homepage:
-    path: /{_locale}
-    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
-    requirements:
-        _locale: '%app_locales%'
-    defaults:
-        template: default/homepage.html.twig
-        _locale: '%locale%'
 
+#homepage:
+#    path: /{_locale}
+#    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
+#    requirements:
+#        _locale: '%app_locales%'
+#    defaults:
+#        template: default/homepage.html.twig
+#        _locale: '%locale%'
+#
