--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
         "league/glide-symfony": "^1.0",
+        "nesbot/carbon": "^1.34",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "stof/doctrine-extensions-bundle": "^1.3",
