--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1",
+        "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "white-october/pagerfanta-bundle": "^1.1"
