Add alternative solution for `addPaths`

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,6 @@ twig:
     form_themes:
         - 'form/layout.html.twig'
         - 'form/fields.html.twig'
+    paths:
+        '%kernel.project_dir%/public/theme/skeleton': ''
+        # '%kernel.project_dir%/public/theme/%general.theme%': ''
