Set Twig to use Bolt parameters

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,5 +5,4 @@ twig:
         - 'form/layout.html.twig'
         - 'form/fields.html.twig'
     paths:
-        '%kernel.project_dir%/public/theme/skeleton': ''
-        # '%kernel.project_dir%/public/theme/%general.theme%': ''
+        '%kernel.project_dir%/public/theme/%bolt.theme%': ''
