--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,21 @@
         "miljar/php-exif": "^0.6.4",
         "nesbot/carbon": "^1.34",
         "sensio/framework-extra-bundle": "^5.1",
-        "sensiolabs/security-checker": "^4.1",
+        "sensiolabs/security-checker": "dev-master",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
+        "symfony/asset": "4.2.x-dev",
+        "symfony/console": "4.2.x-dev",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.1",
-        "symfony/form": "^4.1",
-        "symfony/framework-bundle": "^4.1",
+        "symfony/form": "4.2.x-dev",
+        "symfony/framework-bundle": "4.2.x-dev",
         "symfony/orm-pack": "^1.0",
         "symfony/polyfill-php72": "^1.8",
+        "symfony/security-bundle": "4.2.x-dev",
+        "symfony/serializer": "4.2.x-dev",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "^4.1",
-        "symfony/yaml": "^4.1",
+        "symfony/translation": "4.2.x-dev",
+        "symfony/yaml": "4.2.x-dev",
         "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
@@ -39,17 +41,17 @@
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.12",
-        "symfony/browser-kit": "^4.1",
-        "symfony/css-selector": "^4.1",
-        "symfony/debug-bundle": "^4.1",
-        "symfony/dotenv": "^4.1",
+        "symfony/browser-kit": "4.2.x-dev",
+        "symfony/css-selector": "4.2.x-dev",
+        "symfony/debug-bundle": "4.2.x-dev",
+        "symfony/dotenv": "4.2.x-dev",
         "symfony/maker-bundle": "^1.7",
-        "symfony/phpunit-bridge": "^4.1",
-        "symfony/stopwatch": "^4.1",
-        "symfony/web-profiler-bundle": "^4.1",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/phpunit-bridge": "4.2.x-dev",
+        "symfony/stopwatch": "4.2.x-dev",
+        "symfony/web-profiler-bundle": "4.2.x-dev",
+        "symfony/web-server-bundle": "4.2.x-dev"
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "platform": {
@@ -88,8 +90,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": true,
-            "require": "4.1.*"
+            "allow-contrib": true
         }
     }
 }
