--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,8 +9,7 @@ doctrine:
         driver: 'pdo_sqlite'
         server_version: '3.15'
         charset: utf8mb4
-
-        url: '%env(resolve:DATABASE_URL)%'
+        url: '%bolt.database.url%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
