--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
+        "knplabs/knp-menu-bundle": "^2.0",
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
         "nesbot/carbon": "^1.34",
