Add initial eslint & prettier integration

--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "plugin:vue/essential",
+      "plugin:prettier/recommended",
+      "eslint:recommended"
+    ]
+  },
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
+    "eslint": "5.6.1",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-vue": "4.7.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
     "register-service-worker": "^1.5.2",
@@ -18,6 +30,7 @@
     "vue": "^2.5.17"
   },
   "scripts": {
+    "lint": "eslint --ext .js,.vue assets",
     "dev-server": "./node_modules/.bin/encore dev-server",
     "dev": "./node_modules/.bin/encore dev",
     "watch": "./node_modules/.bin/encore dev --watch",
