Build Sidebar menu with KnpMenuBundle

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,3 +36,8 @@ services:
         arguments: []
         tags:
         - { name: doctrine.event_listener, event: postLoad }
+    app.menu_builder:
+        class: Bolt\Content\MenuBuilder
+        arguments: ["@knp_menu.factory"]
+        tags:
+            - { name: knp_menu.menu_builder, method: createSidebarMenu, alias: sidebar } # The alias is what is used to retrieve the menu
