--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,6 +1,5 @@
 {
   "assets/bolt.js": "/assets/bolt.js",
   "assets/bolt.css": "/assets/bolt.css",
-  "assets/markdown.js": "/assets/markdown.js",
-  "assets/markdown.css": "/assets/markdown.css"
+  "assets/images/icons.svg": "/assets/images/icons.a61f9085.svg"
 }
