--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.4",
     "codemirror": "^5.40.2",
     "simplemde": "^1.11.2",
     "vue": "^2.5.17",
