--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "friendsofphp/php-cs-fixer": "^2.12",
+        "phpstan/phpstan": "^0.10.3",
         "symfony/browser-kit": "^4.1",
         "symfony/css-selector": "^4.1",
         "symfony/debug-bundle": "^4.1",
