--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "codemirror": "^5.40.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.4",
-    "codemirror": "^5.40.2",
     "simplemde": "^1.11.2",
     "vue": "^2.5.17",
+    "vue-flatpickr-component": "^8.0.0",
     "vue-simplemde": "^0.4.8",
     "vue-trumbowyg": "^3.4.0"
   },
@@ -47,7 +48,6 @@
     "root": true,
     "extends": [
       "plugin:vue/essential",
-      "plugin:prettier/recommended",
       "eslint:recommended"
     ]
   },
