added Base Of Image Vue Component

--- a/config/bolt/contenttypes.yml
+++ b/config/bolt/contenttypes.yml
@@ -75,6 +75,9 @@ pages:
         body:
             type: html
             height: 300px
+        textarea:
+            type: textarea
+            postfix: "<p><em>This is a plain text area. the contents will not be processed.</em></p>"
         template:
             type: templateselect
             filter: '*.twig'
