--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "codemirror": "^5.40.2",
+    "filepond-plugin-file-validate-type": "^1.2.0",
+    "filepond-plugin-image-preview": "^3.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
     "vue": "^2.5.17",
+    "vue-filepond": "^4.0.0",
     "vue-flatpickr-component": "^8.0.0",
     "vue-simplemde": "^0.4.8",
     "vue-trumbowyg": "^3.4.0"
