--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "nesbot/carbon": "^1.34",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
+        "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
