removed unused javascript and set jquery globally

--- a/config/bolt/contenttypes.yml
+++ b/config/bolt/contenttypes.yml
@@ -78,6 +78,9 @@ pages:
         textarea:
             type: textarea
             postfix: "<p><em>This is a plain text area. the contents will not be processed.</em></p>"
+        checkbox:
+            type: checkbox
+            label: "This is a checkbox"
         template:
             type: templateselect
             filter: '*.twig'
