--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,5 +1,7 @@
 {
+  "assets/vendor.js": "/assets/vendor.js",
   "assets/bolt.js": "/assets/bolt.js",
   "assets/bolt.css": "/assets/bolt.css",
+  "assets/manifest.js": "/assets/manifest.js",
   "assets/images/icons.svg": "/assets/images/icons.a61f9085.svg"
 }
