--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.1.3",
     "codemirror": "^5.40.2",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "no-scroll": "^2.1.1",
     "popper.js": "^1.14.4",
     "simplemde": "^1.11.2",
     "vue": "^2.5.17",
