--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": true
+            "allow-contrib": true,
+            "require": "^4.1"
         }
     }
 }
