--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,7 +9,10 @@ doctrine:
         driver: 'pdo_sqlite'
         server_version: '3.15'
         charset: utf8mb4
-        url: '%bolt.database.url%'
+        url: '%env(resolve:DATABASE_URL)%'
+        # url: '%bolt.database.url%'
+        # TODO: the url is `sqlite:///%kernel.project_dir%/var/data/blog.sqlite`, meaning that Kernel.php
+        # sets the values, but doesn't resolve the %vars%
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
