--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -24,6 +24,6 @@ frontend:
 # These are the routes defining the Bolt Control Panel ("backend"). It's common
 # to modify the `prefix` so the Control Panel can be accessed at a custom URL.
 control_panel:
-  resource: '../src/Controller/Bolt/'
+  resource: '../src/Controller/Backend/'
   prefix: /bolt
 
