--- a/config/bolt/contenttypes.yml
+++ b/config/bolt/contenttypes.yml
@@ -77,7 +77,7 @@ pages:
             height: 300px
         textarea:
             type: textarea
-            postfix: "<p><em>This is a plain text area. the contents will not be processed.</em></p>"
+            postfix: "This is a plain text area. the contents will <em><strong>not</em></strong> be processed."
         checkbox:
             type: checkbox
             label: "This is a checkbox"
@@ -165,12 +165,14 @@ showcases:
         html:
             type: html
             height: 150px
+            prefix: This is the prefix for the WYSIWYG field.
+            postfix: This is the postfix for the WYSIWYG field.
         textarea:
             type: textarea
-            postfix: "<p><em>This is a plain text area. the contents will not be processed.</em></p>"
+            postfix: "This is a plain text area. the contents will <em><strong>not</em></strong> be processed."
         markdown:
             type: markdown
-            postfix: "<p><em>This field gets parsed as <a href='https://help.github.com/articles/markdown-basics'>Markdown</a>, when rendered on the site.</em></p>"
+            postfix: "This field gets parsed as <a href='https://help.github.com/articles/markdown-basics'>Markdown</a>, when rendered on the site."
         geolocation:
             type: geolocation
             group: Media
@@ -225,7 +227,7 @@ showcases:
             type: repeater
             group: repeater
             limit: 3
-            prefix: "<p>This allows you to create multiple sets of fields. Use the add button at the bottom to create a new empty set.</p>"
+            prefix: "This allows you to create multiple sets of fields. Use the add button at the bottom to create a new empty set."
             fields:
                 repeattitle:
                     type: text
